hard-gists/3b1159baecb809b5fcb3a6154bc3cb0b/run.log
=== Docker Run Log for 3b1159baecb809b5fcb3a6154bc3cb0b ===
Started at: Mi 29. Okt 14:11:11 CET 2025

[2025-10-29 14:11:12] START: Running container for 3b1159baecb809b5fcb3a6154bc3cb0b
[2025-10-29 14:11:12] SUCCESS: Container 3a7cb5d236a377083f3eb4bb651d5229c7932d007bce352e915f8f5309f828a1 started for 3b1159baecb809b5fcb3a6154bc3cb0b
=== Container logs for 3b1159baecb809b5fcb3a6154bc3cb0b ===
  File "/snippet.py", line 198
    print 'done'
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3b1159baecb809b5fcb3a6154bc3cb0b ===
[2025-10-29 14:11:14] INFO: Container 3a7cb5d236a377083f3eb4bb651d5229c7932d007bce352e915f8f5309f828a1 has stopped
